<resources>
    <string name="app_name">PAX</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">    E-post</string>
    <string name="prompt_password">    Lösenord</string>
    <string name="action_sign_in">Logga in</string>
    <string name="action_sign_in_short">Logga in</string>
    <string name="error_invalid_email">Felaktig E-postadress</string>
    <string name="error_invalid_password">Det angivna lösenordet är för kort</string>
    <string name="error_incorrect_password">Det angivna lösenordet är felaktigt</string>
    <string name="error_field_required">Detta fält är obilgatoriskt</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."  </string>

    <!-- Strings related to bottombar -->
    <string name="title_home">Hem</string>
    <string name="title_map">Karta</string>
    <string name="title_search">Sök</string>
    <string name="title_group">Grupper</string>
    <string name="title_settings">Inställningar</string>

    <!-- Strings related to bottombar -->
    <string name="bookings">   Mina paxningar</string>
    <string name="my_favorits">   Favorit rum</string>
    <string name="latest_bookings">   Senaste paxningar</string>

    <!-- Strings related to map activity -->
    <string name="title_overmap">Rum i närheten</string>
    <string name="content_description">Karta</string>
    <string name="mapIcon_patricia">Patricia</string>
    <string name="mapIcon_kuggen">Kuggen</string>

    <!-- Strings related to avalibleRooms activity -->
    <string name="text_availebleRooms">Lediga rum</string>

    <!-- Strings related to calendar dayview activity -->
    <string name="roomName">Rumsnamn</string>
    <string name="date">Datum</string>
    <string name="avalible">Ledigt</string>
    <string name="paxed">Paxat</string>
    <string name="my_pax">Min Pax</string>
    <string name="kl0800">08:00</string>
    <string name="kl0900">09:00</string>
    <string name="kl1000">10:00</string>
    <string name="kl1100">11:00</string>
    <string name="kl1200">12:00</string>
    <string name="kl1300">13:00</string>
    <string name="kl1400">14:00</string>
    <string name="kl1500">15:00</string>
    <string name="kl1600">16:00</string>
    <string name="kl1700">17:00</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Example settings for Group -->
    <string name="maryShelley">Mary Shelley</string>
    <string name="names" > \n\t Emil Ahnstedt \n\t Evelina Holth Österlund \n\t Maja Dzeko \n\t Emma Karlsson \n\t
    Rebecca Kullenius</string>


</resources>
