<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_36dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_36dp"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_36dp"
        android:title="@string/title_map"/>

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_group_black_36dp"
        android:title="@string/title_group"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_36dp"
        android:title="@string/title_settings"/>

</menu>
