<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.evelina.pax.CalendarDayview">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/date"
        android:textColor="@color/colorWhite"

        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_name"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:onClick="displayToastMsg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star"
        app:layout_constraintLeft_toRightOf="@+id/room_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.022"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/roomName"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="70dp"
        android:clipToPadding="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/navigation_view">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView0800"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center|fill"
                android:text="08:00"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button08"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/availeble"
                android:text="@string/avalible"
                app:layout_constraintLeft_toRightOf="@+id/textView0800"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView0900"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="43dp"
                android:gravity="center|fill"
                android:text="09:00"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView0800" />

            <Button
                android:id="@+id/button09"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/availeble"
                android:text="@string/avalible"
                app:layout_constraintLeft_toRightOf="@+id/textView0900"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button08" />

            <TextView
                android:id="@+id/textView1000"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="43dp"
                android:gravity="center|fill"
                android:text="10:00"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView0900" />

            <Button
                android:id="@+id/button10"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/availeble"
                android:text="@string/avalible"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toRightOf="@+id/textView1000"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button09" />

            <TextView
                android:id="@+id/textView1100"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="43dp"
                android:gravity="center|fill"
                android:text="11:00"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1000" />

            <Button
                android:id="@+id/button11"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/availeble"
                android:text="@string/avalible"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toRightOf="@+id/textView1100"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button10" />

            <TextView
                android:id="@+id/textView1200"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="43dp"
                android:gravity="center|fill"
                android:text="12:00"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1100" />

            <Button
                android:id="@+id/button12"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/availeble"
                android:text="@string/avalible"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toRightOf="@+id/textView1200"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button11" />

            <TextView
                android:id="@+id/textView1300"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="43dp"
                android:gravity="center|fill"
                android:text="13:00"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1200" />

            <Button
                android:id="@+id/button13"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/availeble"
                android:text="@string/avalible"
                app:layout_constraintLeft_toRightOf="@+id/textView1300"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button12" />

            <TextView
                android:id="@+id/textView1400"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="43dp"
                android:gravity="center|fill"
                android:text="14:00"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1300" />

            <Button
                android:id="@+id/button14"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/availeble"
                android:text="@string/avalible"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toRightOf="@+id/textView1400"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button13" />

            <TextView
                android:id="@+id/textView1500"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="43dp"
                android:gravity="center|fill"
                android:text="15:00"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1400" />

            <Button
                android:id="@+id/button15"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/availeble"
                android:text="@string/avalible"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toRightOf="@+id/textView1500"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button14" />


            <TextView
                android:id="@+id/textView1600"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="43dp"
                android:gravity="center|fill"
                android:text="16:00"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1500" />

            <Button
                android:id="@+id/button16"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/availeble"
                android:text="@string/avalible"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toRightOf="@+id/textView1600"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button15" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:menu="@menu/navigation"
        app:itemIconTint="@color/tintItem"
        app:itemTextColor="@color/tintItem"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="onBackPress"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/room_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        app:srcCompat="@drawable/ic_arrow_back_white_36dp" />

</android.support.constraint.ConstraintLayout>
